environments/dev/apps/gateway/services/gateway/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: app-gateway
    app.openshift.io/runtime: nodejs
  name: gateway
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
      app.kubernetes.io/part-of: app-gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: gateway
        app.kubernetes.io/part-of: app-gateway
    spec:
      containers:
      - image:   "quay.io/globex/gateway:main-a80ab296f3b7b16632ed7ebe554ffe7b7f55a678"
        imagePullPolicy: Always
        name: gateway
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
