environments/dev/apps/gateway/services/gateway/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: app-gateway
  name: gateway
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: app-gateway
status:
  loadBalancer: {}
