environments/dev/apps/gateway/services/gateway/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: www
  namespace: dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: gateway
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
